# marionette

./: .gitignore  .gitmodules  BUILD  Cargo.toml  build.rs
bpf/: bpf.bzl
c/: ghost_uapi.h
core/: Cargo.toml
core/c/: ghost_uapi.h
core/scripts/: meta-data  notes.md  virsh-install  vm.xml
core/src/: agent.rs  external.rs  ghost.rs  gtid.rs  main.rs  requester.rs  scheduler.rs
core/src/random/: mod.rs
core/src/schedulers/: mod.rs  pct.rs  random.rs
examples/: main.rs  mp_examples.rs
examples/cpp/: test.cc
examples/rust/: Cargo.toml  build.rs  mp_examples.rs
examples/rust/.cargo/: config.toml
examples/rust/src/: main.rs
instrumentation/llvm/: .gitignore  CMakeLists.txt
instrumentation/llvm/src/: CMakeLists.txt  InjectYieldPass.cc  lib.rs
lib/: enclave.cc  enclave.h
schedulers/fifo/per_cpu/: fifo_agent.cc  fifo_scheduler.cc  fifo_scheduler.h
scripts/: Vagrantfile  default-network.xml  notes.md  run.py  run.sh  start-qemu.sh  test.py  user-data  virsh-install  vm.xml
src/: agent.rs  channel.rs  enclave.rs  external.rs  ghost.rs  gtid.rs  lib.rs  main.rs  message.rs  requester.rs  scheduler.rs  task.rs  topology.rs  utils.rs
src/random/: random_source.rs
src/schedulers/: basic_scheduler.rs  mod.rs  pct.rs  random.rs  recorder.rs
tests/: test.cc
